# pgenfit

./: CMakeLists.txt  CMakeLists.txt.user.38254da.4.8-pre1  CMakeLists.txt.user.d9fffa7.22  CMakeLists.txt_bak  In134short.txt  PSDetSim_230726.ipynb  README.md  effparmsex.txt  main.cc  mainbinfit.cc  mainsimulation.cc  makefunction.cc  parmsex.txt  runbenchmark.sh  runsinglefit.sh  rununbinfit_multithreads.sh  simparmsex.txt
.ipynb_checkpoints/: PSDetSim_230726-checkpoint.ipynb
benchmark/benchmark1/: README.md  README.md~
benchmark/benchmark2/: README.md  README.md~
benchmark/benchmark3/: README.md  README.md~
dev/: JJfit.txt  fdecay_2d_ratioLinkDef.hh
dev/mlhfitv1_forbenchmark/: benchmarkParmsIn134.txt  fitF_cxx.d  fitF_cxx_ACLiC_dict_rdict.pcm  fitFbkg.cxx  fitFbkg.h  fitFbkg_cxx_ACLiC_dict_rdict.pcm  fitFdaughters.h  fitFparent.h  fitFparent_cxx.d  mlhfitexpv1.C  out.txt  out_testIn134.root  runallCd133.sh~  runexample.sh~
include/: asymGausRandom.hh  common.hh  decaypath.hh  fitF.hh  simulation.hh  unbinfit.hh
parms/: .~lock.210719_fitparameters.ods#  210629_fitparameters.ods  210629_listofeval.txt  210701_Cd130parms_withisomer.txt  210701_fitparameters.ods  210701_iaea_eval.csv  210701_listofeval.txt  210702_listofeval.txt  210705_fitparameters.ods  210705_listofeval.txt  210706_listofeval.txt  210707_listofeval.txt  210709_listofeval.txt  210710_listofeval.txt  210712_listofeval.txt  210716_listofeval.txt  210718_fitparameters.ods  210718_listofeval.txt  210719_fitparameters.ods  270702_Cd130parms_withisomer.txt  Ag129parms.txt  Ag130parms.txt  Ag130parms.txt_effparms  Ag131parms.txt  Ag131parms.txt_effparms  Ag131parms_ok.txt  Cd130parms.txt  Cd130parms_withisomer.txt  Cd131parms.txt  Cd131parmsHiin.txt  Cd132parms.txt  Cd132parms.txt_effparms  Cd132parmsHiin.txt  Cd133_0.txt  Cd133parms.txt  Cd134parms.txt~  In131parms.txt  In131parmsHiin.txt  In132parms.txt  In132parmsHiin.txt  (+28 more)
parms/210722_parms/: 210719_fitparameters.ods  Ag129parms.txt  Ag129parms.txt_effparms  Ag130parms.txt  Ag131parms.txt  Cd130parms.txt  Cd130parms.txt_effparms  Cd131parms.txt  Cd131parms.txt_effparms  Cd132parms.txt  Cd133parms.txt  Cd133parms.txt_effparms  Cd134parms.txt  Cd134parms.txt_effparms  In131parms.txt  In132parms.txt  In132parms.txt_effparms  In133parms.txt  In133parms.txt_effparms  In134parms.txt  In135parms.txt  In135parms.txt_effparms  In136parms.txt  Sn134parms.txt  Sn135parms.txt  Sn135parms.txt_effparms  Sn136parms.txt  Sn137parms.txt  Sn137parms.txt_effparms  Sn138parms.txt  fitparmsold.xlsx
parms/210727_parms/: .~lock.210727_fitparameters.ods#  210727_fitparameters.ods
parms/210831_parms/: .~lock.210831_fitparameters.ods#  210831_fitparameters.ods
parms/amedata/: README.md  delayedn_eval.npy  delayedn_eval_re.csv  delayedn_eval_re_with_ame20.csv  delayedn_eval_with_ame20.csv  delayedn_eval_with_ame20.npy  getQbn.py  getSn.py  getdelaydn.py  getmass.py  mass_1.mas20.csv  (+7 more)
src/: asymGausRandom.cc  decaypath.cc  fitF.cc  fitF_auxiliary.cc  fitF_cal.cc  simulation.cc  unbinfit.cc
(+220 files in other folders)
